# ddsim_caloxtreme

./: README.md  annular_mesh.py  binning_dataset_1_pions.xml  lsetup.sh  pyproject.toml  timing.py  utils.py  visualize.py  voxelize.py
configs/: particlegun_config.yaml  test_config.yaml
detector/: OpenDataBeamPipe.xml  OpenDataCalorimeter.xml  OpenDataDetector.xml  OpenDataDetectorEnvelopes.xml  OpenDataDetector_noB_noTrack.xml  OpenDataECal.xml  OpenDataHCal.xml  OpenDataLongStrips.xml  OpenDataPixels.xml  OpenDataShortStrips.xml  OpenDataSolenoid.xml  OpenDataTracker.xml
notebooks/: compare_ds.ipynb  evaluate_plotting_helper.py
scripts/: annular_mesh.py  annular_surface.py  ddsim_run.py  root_to_voxels_hdf5.py  root_utils.py  voxelize.py
scripts/utils/: app_logging.py  config.py  madgraph_utils.py
