[project]
name = "test-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "awkward-pandas>=2023.8.0",
    "gradio>=6.8.0",
    "jupyter>=1.1.1",
    "pandas>=1.4.0,<3",
    "plotly>=6.6.0",
    "pyngrok>=7.5.0",
    "seaborn>=0.13.2",
    "streamlit>=1.53.0",
    "uproot>=5.7.1",
    "vector>=1.8.0",
]
